--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "2.0.1"
 group= "the_fireplace.warsmod"
-archivesBaseName = "WarsMod-Forge"
+archivesBaseName = "WarsMod-1.8.9"
 
 minecraft {
     version = "1.8.9-11.15.1.1902-1.8.9"
