--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
-/*
-/*/
-!/src/
-!.gitignore
-!build.gradle
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
+*.ipr
+*.iws
+*.iml
+.idea
+
+# gradle
+build
+.gradle
+
+# other
+eclipse
+run
